# client

./: .env  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  client_example.py  connector_client.py  connector_client_utils.py  dump_script.py  pyproject.toml  requirements.txt  sparql_builder.py  sparql_queries.py
archive/: old_spraql_queries.py
client/: connector_client.py  connector_client_utils.py  sparql_builder.py
docs/: BASIC_INTENTS.md  SPARQL_QUERY_DESIGN.md
messaging/: base_payload_examples.py  base_payload_generator.py  datamodel.py
notebooks/: Demonstration.ipynb  Playground.ipynb  QueryKG.ipynb  Read_Workflow.ipynb  SPARQL.ipynb  Subscribe_Workflow.ipynb  Unsubscribe_Workflow.ipynb  Untitled.ipynb  Untitled1.ipynb  Workflow.ipynb  Workflow_Action.ipynb  Workflow_Read.ipynb  Workflow_Read_Clean.ipynb  Workflow_Subscribe.ipynb  Workflow_Subscribe_Clean.ipynb  Workflow_Unsubscribe.ipynb  garbage_Workflow.ipynb  garbage_multi_device_subscription.ipynb  multi_connector_start.ipynb
notebooks/.ipynb_checkpoints/: Demonstration-checkpoint.ipynb  SPARQL-checkpoint.ipynb
tests/: README.md  __init__.py  conftest.py  test_connector_client.py  test_connector_client_utils.py  test_sparql_builder.py
