[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "client"
version = "0.1.0"
requires-python = ">=3.10"
license = { file = "LICENSE" } # todo: insert license file to repo
authors = [{ name = "Stephan Trattnig", email = "stephan.trattnig@iwb.tum.de"}]
description = "Python client for interacting with a Knowledge Graph and Kafka-based Connectors"

dependencies = [
    "aiohttp>=3.11",
    "aiokafka>=0.12",
    "python-dotenv>=1.0",
    "rdflib>=7.1",
    "pandas>=2.2",
    "pydantic>=2.10",
    # todo: at a later point, connector-base and data-catalog should be installed from PyPI
]

[project.urls]
Repository = "https://gitlab.lrz.de/data-fabric/client.git" # todo: check whether this is the correct one (https vs ssh)
# todo: check which repository to give here: gitlab or github or both?

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "black",
    "deptry",
]
deploy = [
    "connector-base @ git+https://github.com/manufacturing-data-fabric/connector-base.git@main",
    "data-catalog @ git+https://github.com/manufacturing-data-fabric/data-catalog.git@main",
]

[tool.hatch.metadata]
allow-direct-references = true

# linting-related stuff
[tool.ruff]
line-length = 100
exclude = [
    "archive", # todo: check what to exclude here!
    "connector_base",
    "docs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "D", "PL"]
extend-select = ["Q"]
ignore = ["D100", "D104", "ANN401", "PLR2004", "ANN202"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pydoclint]
style = "google"
require-return = true
require-raises = false

[tool.hatch.build.targets.wheel]
packages = ["client"]
